tests/ui/traits/map-types.stderr
error[E0277]: the trait bound `Box<dyn Map<isize, isize>>: Map<usize, isize>` is not satisfied
  --> $DIR/map-types.rs:17:41
   |
LL |     let y: Box<dyn Map<usize, isize>> = Box::new(x);
   |                                         ^^^^^^^^^^^ the trait `Map<usize, isize>` is not implemented for `Box<dyn Map<isize, isize>>`
   |
   = help: the trait `Map<K, V>` is implemented for `HashMap<K, V>`
   = note: required for the cast from `Box<Box<dyn Map<isize, isize>>>` to `Box<dyn Map<usize, isize>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
